--- a/public/styles/fontello.css
+++ b/public/styles/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?12433132');
-  src: url('../font/fontello.eot?12433132#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?12433132') format('woff'),
-       url('../font/fontello.ttf?12433132') format('truetype'),
-       url('../font/fontello.svg?12433132#fontello') format('svg');
+  src: url('../font/fontello.eot?50867601');
+  src: url('../font/fontello.eot?50867601#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?50867601') format('woff'),
+       url('../font/fontello.ttf?50867601') format('truetype'),
+       url('../font/fontello.svg?50867601#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?12433132#fontello') format('svg');
+    src: url('../font/fontello.svg?50867601#fontello') format('svg');
   }
 }
 */
@@ -51,6 +51,14 @@
 }
  
 .icon-user:before { content: '\e801'; } /* '' */
-.icon-book:before { content: '\e802'; } /* '' */
-.icon-search:before { content: '\e803'; } /* '' */
 .icon-pitch:before { content: '\e800'; } /* '' */
+.icon-address:before { content: '\e806'; } /* '' */
+.icon-newspaper:before { content: '\e805'; } /* '' */
+.icon-book:before { content: '\e802'; } /* '' */
+.icon-chart-area:before { content: '\e80a'; } /* '' */
+.icon-users:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e803'; } /* '' */
+.icon-twitter-circled:before { content: '\e807'; } /* '' */
+.icon-facebook-circled:before { content: '\e808'; } /* '' */
+.icon-gplus-circled:before { content: '\e809'; } /* '' */
+.icon-phone:before { content: '\e80b'; } /* '' */
