--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -26,9 +26,7 @@ header{
 #race-map { 
           height: 25em;
           width: 100%; 
-          margin-left: auto;
-          margin-right: auto;
-          border:0.3em solid rgb(0,173,152);
+          border:0.3em solid silver;
           @include box-sizing(border-box);
       }
 
@@ -64,9 +62,13 @@ html{
         color:black;
         text-decoration: none;
         border-bottom: 1px dotted black;
-    }    p{
+    }    
+    a:hover{
+        color:rgb(210,79,57);
+    }
+    p{
         margin-bottom: 0.8em;
-        color: rgb(120,140,140);
+        color: rgb(80,100,100);
     }
 }
 
@@ -96,6 +98,7 @@ h6      { font-size: 0.75em;}
 }
 [type="submit"]:hover, .button:hover{
     background-color: rgba(0,173,152,1);
+    color:white;
 }
 
 h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
@@ -132,9 +135,7 @@ section{
 
 [id="flash_notice"] span{
     padding:0.3em;
-    border-radius: 0.3em;
-    color:white;
-    background-color: #01939A;
+    position:absolute;
 }
 
 .userConnexion{
@@ -356,7 +357,6 @@ footer{
 h2{
     padding: 0.8em 0;
     margin-top: 1em;
-    color: rgb(210,79,57);
     position:relative;
 }
 
@@ -388,7 +388,8 @@ h2{
 }
 
 .logo{
-    width:15%;
+    width:17%;
+    margin-left: 2%;
     img{
         max-width: 100%;
         border:1px solid silver;
@@ -514,7 +515,10 @@ select{
     margin:0;
     font-size: 1em;
     border:none;
-    border-radius: 0.5em;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 1em;
+    border-bottom-right-radius: 1em;
+    border-bottom-left-radius: 0.5em;
     @include box-sizing(border-box);
     padding:0.5em;
     background: url(../img/arrow.png) no-repeat right #fff;
@@ -586,7 +590,7 @@ input[type="date"]{
     h2{
         margin-bottom: 1em;
     }
-    article:nth-child(2){
+    .bigNews{
         width:60%;
         float:left;
         margin-right: 3%;
@@ -610,11 +614,11 @@ input[type="date"]{
             span{
                 float: right;
                 font-size: 0.8em;
-                color: silver;
             }
         }
         h3:hover{
             background-color: rgba(0,0,0,0.1);
+            color:black;
             span{color:white;}
         }
         h3:after{
@@ -664,7 +668,6 @@ section.list{
     .big{
         width: 70%;
         float:left;
-        margin-right: 5%;
         article{
             width:100%;
             margin-bottom: 4em;
@@ -674,10 +677,24 @@ section.list{
         }
     }
     aside{
+        h3, h4{
+            margin-bottom:0.3em;
+        }
+        h4{
+            margin-top: 2em;
+        }
         width: 25%;
         float:right;
         article{
             width:100%;
+        }
+        ul li{
+            padding-left: 0;
+            transition: padding-left 0.5s;
+            margin-bottom: 0.3em;
+        }
+        ul li:hover{
+            padding-left: 0.6em;
         }
     }
 }
@@ -726,6 +743,13 @@ section.list{
         clear:both;
     }
 
+    table{
+        td{
+            padding:0.5em;
+            border:1px solid silver;
+        }
+    }
+
     .left{
         @include span-columns(10,10);
     }
@@ -751,7 +775,7 @@ section.list{
     li{
         float:left;
         width:10%;
-        margin-left:1%;
+        margin-right:1%;
         figure{
             width:100%;
             img{
@@ -804,10 +828,14 @@ section.list{
     float:left;
 }
 
-.sponsors{
-    width: 20%;
+aside{
+    h3{
+        background-color: rgba(255,255,255,0.6);
+        padding:0.5em;
+    }
+    width: 23%;
     float:right;
-    margin-left: 5%;
+    margin-left: 2%;
     img{
         max-width: 100%;
     }
@@ -880,7 +908,7 @@ section.list{
     position:absolute;
         top:0;
         left:0;
-        background-color: rgba(0,0,0,0.8);
+        background-color: rgba(240,240,240,0.8);
         padding:1em;
         margin:1em;
     }
