poster entrainement début
création de la ressource training. Fonctionnement: créer un itinéraire
sur une google map à partir d'un fichier .gtx (.ctx et .kml à venir).

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -107,6 +107,7 @@ h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", Cent
     padding:0;
     margin:auto;
     width:1483px;
+    
     transition: all 0.3s;
 }
 .container:after{
@@ -578,6 +579,20 @@ input[type="date"]{
 .results li{
     margin: 0.2em 0 0.5em;
 }
+/////////----------------------------------------------------------------------------------
+/////////Profil ---------------------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
 
 /////////----------------------------------------------------------------------------------
 /////////News -----------------------------------------------------------------------------
