--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -25,7 +25,7 @@ header{
 
 #trajet{
     display:none;
-    
+
 }
 
 #race-map { 
@@ -366,9 +366,7 @@ h2{
     position:relative;
 }
 
-.races>a{
-    float: right;
-}
+
 .race:after{
     content:"";
     display:block;
@@ -376,7 +374,6 @@ h2{
 }
 .list{
     color:black;
-
 }
 
 .name{
@@ -422,19 +419,55 @@ h2{
     width:10%;
 }
 
+.raceMonth .month {
+    display: inline-block;   
+}
+.nextMonth{
+    float: right;
+}
+.monthNav{
+    padding-bottom:0.5em;
+}
+.monthNav:after{
+    content:"";
+    display:block;
+    clear:both;
+}
 
-
+.monthWrap a.ancre{ display: none; } 
+.raceMonth{ 
+            transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+       -moz-transition: all 1s ease;
+        -ms-transition: all 1s ease;
+         -o-transition: all 1s ease;
+    position: absolute;   /*on sort l'élément du flux*/
+    top: 0;               /*on le positionne précisément dans ...*/
+    left: 0;              /*l'angle haut gauche de son parent positionné*/
+    width: 200%;         /*ou 300% car 3 éléments*/
+    margin: 0;            
+    padding: 0;     } 
+.monthWrap a#wrap1:target ~ .raceMonth{ left: 0px; } 
+.monthWrap a#wrap2:target ~ .raceMonth{ left: -100%; } 
+.monthWrap {
+    position: relative;    /*le parent positionné*/
+    width: auto;          /*limite en largeur (1 élément du slideshow)*/
+    height: 1000px;         /*limite en hauteur*/
+    overflow: hidden;/*on cache ce qui déborde*/
+}
 
 .month{
-    margin-bottom:0.5em;
-    margin-top: 2em;
+    float:left;
+    margin:0;
+    width:50%;
     >h3{
         text-align: center;
         padding:0.5em;
         color:black;
+
     }
     li{
-        width:100%;
+        width:auto;
         position:relative;
         padding: 1em 0;
         border-bottom: 1px solid silver;
