--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -30,10 +30,18 @@ header{
 
 #race-map { 
           height: 25em;
-          width: 100%; 
+          width: auto; 
           border:0.3em solid silver;
           @include box-sizing(border-box);
       }
+#elevation_chart{
+    width:auto;
+    display:block;
+    border-left:0.3em solid silver;
+    border-right:0.3em solid silver;
+    border-bottom:0.3em solid silver;
+    @include box-sizing(border-box);
+}
 
 header:after{
     content:"";
